fixing the blurry background when scaling and element!.

--- a/app/assets/styles/modules/components/_avatar.css
+++ b/app/assets/styles/modules/components/_avatar.css
@@ -1,6 +1,5 @@
 .avatar {
   position: relative;
-  backface-visibility: hidden;
 
   &__image {
     clip-path: circle();
