--- a/app/assets/styles/modules/components/_button.css
+++ b/app/assets/styles/modules/components/_button.css
@@ -11,21 +11,21 @@
   background-color: $mainColor;
   color: white;
   transition: all 200ms;
+  z-index: 1;
 
   @mixin atLarge {
     font-size: .9rem;
   }
   &::after {
     content: '';
-    display: block;
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     background-color: $mainColor;
-    z-index: -1;
     border-radius: inherit;
+    z-index: -1;
     transition: all 300ms;
   }
   &:hover { 
